<resources>
    <string name="app_name">RnOpenGApps</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_reset">Reset Wizard</string>

    <!--First Run Setup Wizard-->
    <string name="suw_wellcome_title">Welcome to RnOpenGApps</string>
    <string name="suw_wellcome">This application uses resources from The OpenGApps Project (opengapps.org).\n\nIt will connect to Github to fetch info about latest OpenGApps package releases.\n\nDo not worry, you can configure package settings again by clicking \"Reset Wizard\" later.</string>
    <!--<string name="suw_wellcome">This application uses resources from The OpenGApps Project (opengapps.org).\n\nIt will connect to Github to fetch info about latest OpenGApps package releases.\n\nDo not worry, you can configure package settings again by clicking \"Reset Wizard\" later.</string>-->
    <string name="suw_android_verison_title">Android Version</string>
    <string name="suw_android_version">Auto select: Android</string>
    <string name="suw_cpu_title">CPU Platform</string>
    <string name="suw_cpu">Auto select:</string>
    <string name="suw_var_title">Package Variant</string>
    <string name="suw_final_title">Congratulations!</string>
    <string name="suw_final">You have configured everything!\n\nNow,download OpenGApps!\n\nIf you support my work, just rate this app on Google Play!What about five stars :)\n\nWhat about...Buy a donation package?</string>

    <!--Drawer-->
    <string name="drawer_dev">Developed By hjthjthjt</string>
    <string name="menu_main">Main</string>
    <string name="menu_device">Device</string>
    <string name="menu_star">Rate</string>
    <string name="menu_star_message">Why not... give me FIVE stars?</string>
    <string name="menu_star_go">GO!</string>
    <string name="menu_other">Others</string>
    <string name="gapps_version">GApps Version</string>
    <string name="donate">Donate Me!</string>

    <!--Main-->
    <string name="my_device">My Device</string>
    <!--GAPPS-->
    <string name="gapps_ok">GApps have been installed! Click for details</string>
    <string name="gapps_warning">GApps have not been installed!</string>
    <string name="gapps_root">Grant Root Permission</string>
    <string name="gapps_root_msg">View the GApps details of your device, Root Permission should be granted</string>
    <string name="gapps_root_msg_get">GRANT</string>
    <string name="gapps_root_msg_gett">RnOpenGApps granted root permission</string>
    <string name="gapps_root_msg_get_no">Your device seems to be not Rooted</string>
    <string name="gapps_root_msg_no">CANCEL</string>
    <string name="gapps_root_msg_noo">You canceled the grant of Root permission</string>
    <string name="gapps_root_msg_why">WHY NEED ROOT?</string>
    <string name="gapps_details_title">OpenGApps Details</string>
    <string name="gapps_details_msg">OpenGApps Version: </string>
    <string name="gapps_details_error">Your GApps seems to be not OpenGApps</string>
    <!--DOWNLOAD-->
    <string name="loading">Loading...</string>
    <string name="latest_release">Latest Release For</string>
    <string name="latest_release_end">\nClick here to download.</string>
    <string name="no_support">Sorry,your device is not supported.</string>
    <string name="download_confirm">Download Confirm</string>
    <string name="download_confirm_1">Click DOWNLOAD to enjoy.\n\nBefore that, please confirm these informations.\n\nAndroid Version-----</string>
    <string name="download_confirm_2">\nCPU Platform-----</string>
    <string name="download_confirm_3">\nPackage Variant-----</string>
    <string name="download_confirm_4">\n\nIs there something wrong? Click WIZARD to correct them.</string>
    <string name="download">DOWNLOAD</string>
    <string name="correct">WIZARD</string>
    <string name="wait">Wait for getting the latest OpenGApps Version. The speed of loading depends on how fast you connect to Github...</string>
    <string name="notices">NOTICE</string>
    <string name="notices_con">If you do not know how to choose GApps Package, just click here.</string>
    <string name="warning90">WARNING</string>
    <string name="warning90_xda">XDA Thread</string>
    <string name="warning90_context">OpenGApps for Android 9.0 is built by Nezorflame which is Unofficial, and it\'s in ALPHA quality right now, bugs are present and being fixed in the process.\n\nMay damage your device.</string>


    <!--About-->
    <string name="title_about">About</string>
    <string name="about_version_label">Version</string>
    <string name="about_developers_label">Developer</string>
    <string name="about_libraries_label">Used Libraries</string>
    <string name="about_source_label">Github Open Source</string>
    <string name="about_tran_label">Help Translation</string>
    <string name="about_tran_mess">Do you want this app to use your native language? Why not try to translate! Click \'Visit Localization Page\' to translate. Remember to open a Pull Request!</string>
    <string name="about_tran_ok">Visit Localization Page</string>

    <!--Donate-->
    <string name="alipay">Alipay</string>
    <string name="alipay_click">Click here to open Alipay App.</string>
    <string name="google_play">Google Play Donation</string>
    <string name="google_play_click">Click here to open Google Play to donate.</string>
    <string name="tem_dis">Temporarily Unsupported.</string>
</resources>
