<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contain_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables,ContentDescription">

        <LinearLayout
            android:id="@android:id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="@dimen/cardview_default_radius"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="72dp"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_gravity="center_vertical"
                            android:src="@mipmap/ic_launcher" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:text="@string/app_name"
                            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:minHeight="48dp"
                        android:orientation="horizontal"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_info" />

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="32dp"
                            android:layout_marginStart="32dp"
                            android:orientation="vertical"
                            android:paddingBottom="8dp"
                            android:paddingTop="8dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/about_version_label"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                            <TextView
                                android:id="@+id/app_version"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                                tools:text="2.0(20180225)" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/developersView"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:minHeight="48dp"
                        android:orientation="horizontal"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_person" />

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="32dp"
                            android:layout_marginStart="32dp"
                            android:orientation="vertical"
                            android:paddingBottom="8dp"
                            android:paddingTop="8dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/about_developers_label"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                            <TextView
                                android:id="@+id/app_developer"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="hjthjthjt"
                                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/licensesView"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:minHeight="48dp"
                        android:orientation="horizontal"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_description" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="32dp"
                            android:layout_marginStart="32dp"
                            android:paddingBottom="8dp"
                            android:paddingTop="8dp"
                            android:text="@string/about_libraries_label"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/sourceCodeView"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:minHeight="48dp"
                        android:orientation="horizontal"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_github_about" />

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="32dp"
                            android:layout_marginStart="32dp"
                            android:orientation="vertical"
                            android:paddingBottom="8dp"
                            android:paddingTop="8dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/about_source_label"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/langView"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:minHeight="48dp"
                        android:orientation="horizontal"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_language" />

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="32dp"
                            android:layout_marginStart="32dp"
                            android:orientation="vertical"
                            android:paddingBottom="8dp"
                            android:paddingTop="8dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/about_tran_label"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>